<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ml_welcome"
    app:layoutDescription="@xml/activity_welcome_scene"
    tools:context=".ui.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/logo_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_with_text"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_text" />

    <TextView
        android:id="@+id/first_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:text="@string/first_welcome"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="300dp" />

    <TextView
        android:id="@+id/first_welcome_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:text="@string/first_welcome_2"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="336dp" />

    <TextView
        android:id="@+id/first_welcome_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:text="@string/first_welcome_3"/>


    <ImageView
        android:id="@+id/homepag_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/homepage_view"
        android:src="@drawable/med_1"
        app:layout_constraintStart_toEndOf="@id/logo_welcome"
        app:layout_constraintTop_toBottomOf="@id/logo_welcome" />

    <TextView
        android:id="@+id/menu2_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2_head"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/homepag_view"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/menu2_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu2_desc"
        android:gravity="center"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="434dp" />


    <ImageView
        android:id="@+id/camera_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:contentDescription="@string/camera_view"
        android:src="@drawable/camera_vector"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="316dp" />

    <TextView
        android:id="@+id/menu3_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu3_head"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/menu3_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/menu3_desc"/>


    <ImageView
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/detail_view"
        android:scaleType="fitXY"
        android:src="@drawable/detail_view"
        tools:layout_editor_absoluteX="32dp"
        tools:layout_editor_absoluteY="416dp" />

    <TextView
        android:id="@+id/menu4_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu4_head"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/menu4_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu4_desc"
        android:gravity="center"/>

    <Button
        android:id="@+id/get_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/get_started"
        android:backgroundTint="@color/green_3"/>



    <ImageView
        android:id="@+id/footer_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:contentDescription="@string/footer_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_rectangle_3" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_2" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="32dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/green_2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.56"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.motion.widget.MotionLayout>