<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ui.detail.MedDetailActivity">

    <ImageView
        android:id="@+id/detail_img"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/detail_image" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back" />

    <TextView
        android:id="@+id/med_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/med_name"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_img" />

    <ImageView
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/med_name"
        app:layout_constraintStart_toStartOf="@+id/med_name"
        app:layout_constraintTop_toBottomOf="@+id/med_name" />

    <TextView
        android:id="@+id/used_for"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/used_for"
        android:textStyle="bold"
        android:textColor="@color/green_1"
        android:background="@drawable/custom_bg_usedfor"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline" />

    <TextView
        android:id="@+id/used_for_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/used_for_value"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:background="@drawable/custom_bg_usedfor_value"
        app:layout_constraintEnd_toEndOf="@+id/used_for"
        app:layout_constraintStart_toStartOf="@+id/used_for"
        app:layout_constraintTop_toBottomOf="@+id/used_for" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ic_baseline_bookmark_24"
        app:fabCustomSize="60dp"
        app:tint="#616161"
        app:backgroundTint="@color/green_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/bookmark" />

    <ImageView
        android:id="@+id/footer_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_rectangle_3"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/footer_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>