<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/profile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/title_profile"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/underline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:src="@drawable/ic_rectangle_3"
        app:layout_constraintEnd_toEndOf="@+id/profile_header"
        app:layout_constraintStart_toStartOf="@+id/profile_header"
        app:layout_constraintTop_toBottomOf="@+id/profile_header"
        android:contentDescription="@string/underline" />

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_rectangle_13"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline"
        android:contentDescription="@string/background" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/fullname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/floatingActionButton" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fullname"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/name_title"
        app:layout_constraintStart_toStartOf="@+id/name_title"
        app:layout_constraintTop_toBottomOf="@+id/name_title" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullname" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textStyle="bold"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/email_title"
        app:layout_constraintStart_toStartOf="@+id/email_title"
        app:layout_constraintTop_toBottomOf="@+id/email_title" />

    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/logout"
        android:backgroundTint="#FF8181"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/title_profile"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:backgroundTint="@color/green_2"
        app:fabCustomSize="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background"
        app:maxImageSize="50dp"
        app:tint="@color/dark_5" />

</androidx.constraintlayout.widget.ConstraintLayout>